test_suite/tests/ui/pass/option_mut_slice.rs
use clapi::macros::*;

#[command]
#[option(slice)]
fn test(slice: &mut [u32]){}

fn main(){}