test_suite/tests/ui/fail/invalid_subcommand_value/invalid_subcommand_version.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(version=true)]
    fn child(){}
}

fn main(){}